# logger

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  tests.cmake
include/jlizard/: logger.h
src/: logger.cpp
tests/: unit_tests.cpp  unit_tests.h
